--- a/assets/index.css.liquid
+++ b/assets/index.css.liquid
@@ -3,7 +3,7 @@
   font-display: swap;
   font-style: normal;
   font-weight: 400;
- src: url("{{ 'AvenirNextRoundedStd-Reg.woff' | asset_url }}") format("woff");
+  src: url("{{ 'AvenirNextRoundedStd-Reg.woff' | asset_url }}") format("woff");
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-display: swap;
   font-style: normal;
   font-weight: 500;
-  src: url("{{ 'AvenirNextRoundedStd-Med.woff' | asset_url  }}") format("woff");
+  src: url("{{ 'AvenirNextRoundedStd-Med.woff' | asset_url }}") format("woff");
 }
 
 
@@ -109,7 +109,7 @@ fieldset {
   padding: 0.625rem;
   height: auto;
   background: var(--background-color-1);
-  left: 0%;
+  left: 0;
   position: absolute;
   transform: translateX(-100%);
   transition: transform 0.3s ease-out;
@@ -236,8 +236,7 @@ ul {
   list-style: none;
   font-size: 0.75rem;
   margin: 0;
-  padding: 0;
-  padding-top: 1rem;
+  padding: 1rem 0 0;
 }
 
 .breadcrumbs__page {
@@ -275,8 +274,7 @@ ul {
 }
 
 .products__heading {
-  margin: 0;
-  margin-bottom: 4rem;
+  margin: 0 0 4rem;
   text-align: center;
   font-weight: 400;
   font-size: 1.375rem;
@@ -324,7 +322,7 @@ ul {
   margin: 0 0 1.5rem;
 }
 
-.product__attribute {
+.product__price {
   font-size: 1.25rem;
   font-weight: inherit;
   margin: 0 0 1.5rem;
@@ -347,8 +345,7 @@ ul {
 
 .product__description {
   font-size: 1.125rem;
-  margin: 0;
-  margin-bottom: 1.687rem;
+  margin: 0 0 1.687rem;
 }
 
 /* === / Product === */
@@ -382,8 +379,7 @@ ul {
 }
 
 .product-card__heading {
-  margin: 0;
-  margin-bottom: 0.5rem;
+  margin: 0 0 0.5rem;
   font-weight: 400;
   text-align: center;
 }
@@ -413,14 +409,13 @@ ul {
 
 .product-card__tags {
   position: absolute;
-  left: 0%;
-  top: 0%;
+  left: 0;
+  top: 0;
   z-index: 1;
 }
 
-.product-card__attribute {
-  margin: 0;
-  margin-top: auto;
+.product-card__price {
+  margin: auto 0 0;
   font-weight: inherit;
   color: inherit;
 }
@@ -464,14 +459,9 @@ ul {
   font-style: normal;
 }
 
-.address__name,
-.address__location {
-  margin: 0;
-  margin-bottom: 1rem;
-}
-
-.address__location {
-  margin-bottom: 1rem;
+.address__info > p {
+  margin: 0 0 1rem;
+  font-family: inherit;
 }
 
 /* === / Address == */
@@ -479,13 +469,12 @@ ul {
 /* === Footer === */
 
 .footer {
-  padding: 5rem 0 2.062rem 0;
+  padding: 5rem 0 2.062rem;
   border-top: 0.0625rem solid var(--border-color-1);
 }
 
 .footer-navigation__label {
-  margin: 0;
-  margin-bottom: 1.5rem;
+  margin: 0 0 1.5rem;
   font-size: 0.812rem;
   text-transform: uppercase;
   font-weight: inherit;
@@ -582,8 +571,8 @@ ul {
 }
 
 .accordion__details[open] .accordion__heading .toggle::after {
-  width: 0rem;
-  height: 0rem;
+  width: 0;
+  height: 0;
 }
 
 /* === / Accordion === */
