--- a/sections/alternate-main-product.liquid
+++ b/sections/alternate-main-product.liquid
@@ -1,57 +1,37 @@
-{% schema %}
-  {
-    "name": "Product",
-    "settings": [],
-    "limit":1,
-    "templates": ["product"],
-    "blocks": [
-        {
-          "name":"Info",
-          "type":"accordeon",
-          "settings": [
-             {
-               "id": "heading",
-               "type":"text",
-               "label":"Heading"
-             },
-            {
-              "id": "text",
-              "type":"richtext",
-              "label":"Text"
-            }
-          ]
-        }
-    ],
-    "presets": [
-       {
-         "name": "Accordeon",
-         "blocks": [
-           {
-              "type":"accordeon"
-           }
-         ]
-         
-       }
-    ]
-  }
-{% endschema %}
+
 
 {% stylesheet %}
 {% endstylesheet %}
 
 {% javascript %}
 {% endjavascript %}
-<main id="main" class="main">
+
+{% liquid
+    assign productTitle = product.title
+    assign productPrice = product.price | money_with_currency
+    assign includeTaxLabel = "products.product.include_taxes" | t
+    assign sizeLabel = "products.product.size.label" | t
+    assign colorLabel = "products.product.color.label" | t
+    assign quantityLabel = "products.product.quantity.label" | t
+    assign quantityDecreaseLabel = "products.product.quantity.decrease" | t
+    assign quantityIncreaseLabel ="products.product.quantity.increase" | t
+    assign addToCartLabel = "products.product.add_to_cart" | t
+    assign buyItNowLabel = "products.product.product_buy_it_now" | t
+    assign productDescription = product.description
+    assign accordeonBlocks = section.blocks | map: 'type' | where: 'accordeon' 
+%}
+
+<main id="main" class="main" tabindex="-1">
         <div class="container">
             <section class="product">
                 <div class="product__container container">
                     <div class="product__info">
-                        <h1 class="product__heading">White unisex t-shirt</h1>
-                        <h2 class="product__attribute"><abbr>CHF 40</abbr></h2>
-                        <p class="product__tax"><small>Tax included</small></p>
+                        <h1 class="product__heading">{{productTitle}}</h1>
+                        <h2 class="product__price"><abbr>{{productPrice}}</abbr></h2>
+                        <p class="product__tax"><small>{{includeTax}}</small></p>
                         <form method="post" action="/cart">
                             <fieldset class="product__fieldset" name="size">
-                                <legend class="size__legend">Size</legend>
+                                <legend class="size__legend">{{sizeLabel}}</legend>
                                 <div class="radio-group">
                                     <div class="radio">
                                         <input type="radio" value="XS" id="size-xs" name="size" class="radio__input"
@@ -86,7 +66,7 @@
                                 </div>
                             </fieldset>
                             <fieldset class="product__fieldset">
-                                <legend class="color__legend">Color<span aria-hidden="true">-White</span></legend>
+                                <legend class="color__legend">{{colorLabel}}<span aria-hidden="true">-White</span></legend>
                                 <div class="radio-group">
                                     <div class="radio radio--color">
                                         <input type="radio" value="white" id="color-white" name="color"
@@ -138,67 +118,79 @@
                                 </div>
                             </fieldset>
                             <fieldset class="product__fieldset product__fieldset--quintity">
-                                <legend class="quintity__legend"><label for="quintity">Quantity</label></legend>
+                                <legend class="quintity__legend"><label for="quintity">{{quantityLabel}}</label></legend>
                                 <div class="quintity__controls">
                                     <input id="quintity" type="number" class="quintity__input" name="quintity"
                                         value="1">
                                     <button class="quintity__button quintity__button--decrease" type="button">
-                                        <span class="visually-hidden">Decrease quantity</span>
+                                        <span class="visually-hidden">{{quantityDecreaseLabel}}</span>
                                     </button>
                                     <button class="quintity__button quintity__button--increase" type="button">
-                                        <span class="visually-hidden">Increase quantity</span>
+                                        <span class="visually-hidden">{{quantityIncreaseLabel}}</span>
                                     </button>
                                 </div>
                             </fieldset>
                             <div class="button-group">
-                                <button class="button button--primary" type="submit" name="type" value="add">Add to
-                                    cart</button>
-                                <button class="button button--secondary" type="submit" name="type" value="buy">Buy it
-                                    now</button>
+                                <button class="button button--primary" type="submit" name="type" value="add">{{addToCartLabel}}</button>
+                                <button class="button button--secondary" type="submit" name="type" value="buy">{{buyItNowLabel}}</button>
                             </div>
                         </form>
-                        <p class="product__description">A unisex basic garment with a loose fit. Light and comfortable
-                            to your skin. </p>
-                        <p class="product__description">Certification of cotton - GOTS</p>
+                        <div class="product__description">
+                         {{productDescription}}
+                        </div>
                     </div>
                    {{ product.featured_image | image_url: width: 473 | image_tag: class: "product__img" }}
                 </div>
+              {% if accordeonBlocks.size > 0 %}
               <ul class="accordion__list">
-                    <li class="accordion__item">
-                        <details class="accordion__details" open>
-                            <summary class="accordion__heading">Sizing & Fit <span class="toggle"></span></summary>
-                            <p class="accordion__text">
-                                Olga is 175cm, she is wearing a size S.
-                            </p>
-                        </details>
-                    </li>
-                    <li class="accordion__item">
-                        <details class="accordion__details">
-                            <summary class="accordion__heading">Composition & Care <span class="toggle"></span>
-                            </summary>
-                            <p class="accordion__text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam totam nihil fuga eaque
-                                placeat
-                                natus sed, ea illo quia? Ab dolore deserunt quam dolorum dolorem necessitatibus
-                                similique
-                                aliquam impedit at?
-                            </p>
-                        </details>
-                    </li>
-                    <li class="accordion__item">
-                        <details class="accordion__details">
-                            <summary class="accordion__heading">Delivery & Returns <span class="toggle"></span>
-                            </summary>
-                            <p class="accordion__text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam totam nihil fuga eaque
-                                placeat
-                                natus sed, ea illo quia? Ab dolore deserunt quam dolorum dolorem necessitatibus
-                                similique
-                                aliquam impedit at?
-                            </p>
-                        </details>
-                    </li>
-</ul>
+              {% for block in section.blocks %}
+                <li class="accordion__item">
+                    <details class="accordion__details" open>
+                        <summary class="accordion__heading">{{block.settings.heading}}<span class="toggle"></span></summary>
+                        <div class="accordion__text">{{block.settings.text}}</div>
+                    </details>
+                </li>
+              {% endfor %}
+              </ul>
+              {% endif %}
             </section>
         </div>
-    </main>
+</main>
+
+{% schema %}
+    {
+      "name": "Product",
+      "settings": [],
+      "limit":1,
+      "templates": ["product"],
+      "blocks": [
+          {
+            "name":"Info",
+            "type":"accordeon",
+            "settings": [
+               {
+                 "id": "heading",
+                 "type":"text",
+                 "label":"Heading"
+               },
+              {
+                "id": "text",
+                "type":"richtext",
+                "label":"Text"
+              }
+            ]
+          }
+      ],
+      "presets": [
+         {
+           "name": "Accordeon",
+           "blocks": [
+             {
+                "type":"accordeon"
+             }
+           ]
+           
+         }
+      ]
+    }
+{% endschema %}
