--- a/src/styles/sections/alternate-main-product.scss
+++ b/src/styles/sections/alternate-main-product.scss
@@ -46,7 +46,7 @@
   margin-bottom: 1.5rem;
 }
 
-.product__fieldset--quintity .quintity__controls {
+.quantity__controls {
   max-width: 7.5rem;
 }
 
