--- a/sections/alternate-main-product.liquid
+++ b/sections/alternate-main-product.liquid
@@ -56,10 +56,12 @@
                                             name="options[{{ product_option.name | escape }}]"
                                             id="Option-{{- value | escape -}}"  
                                             value="{{ value | escape }}" class="radio__input"
-                                            aria-checked="false" 
-                                            {% if product_option.selected_value == value -%}
-                                                checked
-                                            {%- endif -%}>
+                                        {% if product_option.selected_value == value -%}
+                                            checked
+                                            aria-checked="true"
+                                        {%-else -%}
+                                            aria-checked="false"
+                                        {%- endif -%}>
                                         <label for="Option-{{- value | escape -}}" class="radio__label">{{ value }}</label>
                                     </div>
                                 {%- endfor -%}
@@ -68,7 +70,7 @@
                         {%- endif -%}
                         {%- if product_option.name == "Color" -%}
                         <fieldset class="product__fieldset product__fieldset--color">
-                        <legend class="color__legend">{{ product_option.name }}<span aria-hidden="true">-{{- product_option.selected_value | escape -}}</span></legend>
+                        <legend class="color__legend">{{ product_option.name }}<span class="color-name" aria-hidden="true">-{{- product_option.selected_value | escape -}}</span></legend>
                             <div class="radio-group">
                                 {%- for value in product_option.values -%}
                                 <div class="radio radio--color">
@@ -78,9 +80,11 @@
                                         name="options[{{ product_option.name | escape }}]"
                                         value="{{- value | escape -}}" 
                                         class="radio__input"
-                                        aria-checked="false" 
                                         {% if product_option.selected_value == value -%}
                                             checked
+                                            aria-checked="true"
+                                        {%-else -%}
+                                            aria-checked="false"
                                         {%- endif -%}>
                                         <label  for="Option-{{- value | escape -}}" class="radio__label" data-tooltip="{{- value | escape -}}">
                                             <span class="visually-hidden">{{- value | escape -}}</span>
@@ -92,15 +96,15 @@
                         </fieldset>
                         {%- endif -%}
                         {%- endfor -%}
-                        <fieldset class="product__fieldset product__fieldset--quintity">
-                                <legend class="quintity__legend"><label for="quintity">{{quantityLabel}}</label></legend>
-                                <div class="quintity__controls">
-                                    <input id="quintity" type="number" class="quintity__input" name="quantity"
+                        <fieldset class="product__fieldset product__fieldset--quantity">
+                                <legend class="quantity__legend"><label for="quantity">{{quantityLabel}}</label></legend>
+                                <div class="quantity__controls">
+                                    <input id="quantity" type="number" class="quantity__input" name="quantity"
                                         value="1" min="1" max="9999">
-                                    <button class="quintity__button quintity__button--decrease" type="button">
+                                    <button class="quantity__button quantity__button--decrease" type="button">
                                         <span class="visually-hidden">{{quantityDecreaseLabel}}</span>
                                     </button>
-                                    <button class="quintity__button quintity__button--increase" type="button">
+                                    <button class="quantity__button quantity__button--increase" type="button">
                                         <span class="visually-hidden">{{quantityIncreaseLabel}}</span>
                                     </button>
                                 </div>
