--- a/src/styles/components/buttons/quantity-button.scss
+++ b/src/styles/components/buttons/quantity-button.scss
@@ -1,51 +1,51 @@
-/* === Quintity == */
+/* === quantity == */
 
-.quintity {
+.quantity {
   border: none;
 }
 
-.quintity__legend,
+.quantity__legend,
 .size__legend,
 .color__legend {
   font-weight: 500;
   margin-bottom: 0.75rem;
 }
 
-.quintity__controls {
+.quantity__controls {
   display: flex;
 }
 
-.quintity__button {
+.quantity__button {
+  position: relative;
   min-width: 2.5rem;
   min-height: 2.5rem;
-  position: relative;
+  border: 0.062rem solid var(--border-color-1);
   background: var(--background-color-3);
   color: var(--text-color-3);
-  border: 0.062rem solid var(--border-color-1);
   transition: all 0.3s ease-out;
 }
 
-.quintity__button::before,
-.quintity__button::after {
+.quantity__button::before,
+.quantity__button::after {
   content: '';
   position: absolute;
-  display: block;
   top: 50%;
   left: 50%;
-  margin-top: -0.031rem;
-  margin-left: -0.312rem;
+  display: block;
   width: 0.625rem;
   height: 0.0625rem;
-  background: currentColor;
+  margin-top: -0.031rem;
+  margin-left: -0.312rem;
+  background: currentcolor;
 }
 
-.quintity__button:hover {
+.quantity__button:hover {
   background: var(--background-color-3);
   color: var(--text-color-3);
   border: 0.062rem solid var(--border-color-2);
 }
 
-.quintity__input {
+.quantity__input {
   min-width: 2.5rem;
   min-height: 2.5rem;
   padding: 0.3rem;
@@ -60,22 +60,22 @@
   transition: all 0.3s ease-out;
 }
 
-.quintity__input:hover {
+.quantity__input:hover {
   border-color: var(---border-color-2);
   border-left: 0.062rem solid var(--border-color-2);
   border-right: 0.062rem solid var(--border-color-2);
 }
 
-.quintity__input::-webkit-inner-spin-button,
-.quintity__input::-webkit-outer-spin-button {
+.quantity__input::-webkit-inner-spin-button,
+.quantity__input::-webkit-outer-spin-button {
   appearance: none;
   margin: 0;
 }
 
-.quintity__button--decrease {
+.quantity__button--decrease {
   order: -1;
 }
 
-.quintity__button--increase::after {
+.quantity__button--increase::after {
   transform: rotate(90deg);
 }
